--- a/index.html
+++ b/index.html
@@ -747,6 +747,7 @@
     </div>
     
     <!-- Load JavaScript -->
+<script>
     // Firebase Configuration
 const firebaseConfig = {
     apiKey: "AIzaSyGGq5q-1zu61MqYxUNuYhZQRmkNDaeZeAI",
@@ -1755,4 +1756,7 @@ document.addEventListener('DOMContentLoaded', function() {
 // Warn before leaving if there are unsaved changes
 window.addEventListener('beforeunload', function(e) {
     autoSaveToLocalStorage();
+    </script>
+</body>
+</html>
 });
