--- a/timeline.html
+++ b/timeline.html
@@ -11,7 +11,7 @@
         import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // ✅ แก้ไข API Key ให้ถูกต้องเป๊ะๆ (ตัว W ใหญ่)
+        // ✅ แก้ไข API Key ให้ถูกต้องเป๊ะๆ (ตัว W ใหญ่) ตรวจสอบกับรูปภาพแล้ว 100%
         const firebaseConfig = {
             apiKey: "AIzaSyAKWEnv4kzNmcTGHri1_mF_iagsycIqXd8",
             authDomain: "benz-ab922.firebaseapp.com",
@@ -30,12 +30,18 @@
         window.handleLogin = async function() {
             const email = document.getElementById('email').value;
             const pass = document.getElementById('password').value;
-            if (!email || !pass) { alert('กรุณากรอก Email และ Password'); return; }
+            
+            if (!email || !pass) {
+                alert('กรุณากรอก Email และ Password');
+                return;
+            }
+
             try {
                 await signInWithEmailAndPassword(auth, email, pass);
+                // ไม่ต้องทำอะไรต่อ onAuthStateChanged จะทำงานเอง
             } catch (error) {
                 console.error("Login Error:", error);
-                alert('❌ ล็อกอินไม่ผ่าน: ' + error.message);
+                alert('❌ ล็อกอินไม่ผ่าน: ' + error.message + '\n(เช็ค Email/Pass หรือ API Key อีกครั้ง)');
             }
         };
 
@@ -70,7 +76,7 @@
             return machineId;
         }
 
-        // --- Cloud Save Function ---
+        // --- Cloud Save Function (Auto-Save) ---
         window.saveToCloud = async function() {
             try {
                 showNotification('⏳ กำลังบันทึก...', 'info');
@@ -85,7 +91,8 @@
                 showNotification(`✅ บันทึกแล้ว!`, 'success');
             } catch (e) {
                 console.error("Error: ", e);
-                // alert('❌ Error: ' + e.message); // ปิด Alert รบกวนเวลา Auto-save
+                // ปิด alert error ชั่วคราวเพื่อไม่ให้รบกวนตอน auto-save
+                console.log('Save Error: ' + e.message); 
             }
         };
 
