--- a/timeline.html
+++ b/timeline.html
@@ -11,7 +11,7 @@
         import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // ✅ แก้ไข API Key ให้ถูกต้องเป๊ะๆ (ตัว W ใหญ่) ตรวจสอบกับรูปภาพแล้ว 100%
+        // ✅ แก้ไข API Key ให้ถูกต้องตามภาพหลังบ้าน Firebase แล้ว (W ใหญ่, n เล็ก)
         const firebaseConfig = {
             apiKey: "AIzaSyAKWEnv4kzNmcTGHri1_mF_iagsycIqXd8",
             authDomain: "benz-ab922.firebaseapp.com",
@@ -38,10 +38,10 @@
 
             try {
                 await signInWithEmailAndPassword(auth, email, pass);
-                // ไม่ต้องทำอะไรต่อ onAuthStateChanged จะทำงานเอง
+                // onAuthStateChanged จะทำงานต่อเอง
             } catch (error) {
                 console.error("Login Error:", error);
-                alert('❌ ล็อกอินไม่ผ่าน: ' + error.message + '\n(เช็ค Email/Pass หรือ API Key อีกครั้ง)');
+                alert('❌ ล็อกอินไม่ผ่าน: ' + error.message);
             }
         };
 
@@ -91,8 +91,6 @@
                 showNotification(`✅ บันทึกแล้ว!`, 'success');
             } catch (e) {
                 console.error("Error: ", e);
-                // ปิด alert error ชั่วคราวเพื่อไม่ให้รบกวนตอน auto-save
-                console.log('Save Error: ' + e.message); 
             }
         };
 
